--- a/src/app/goal-details/goal-details.component.html
+++ b/src/app/goal-details/goal-details.component.html
@@ -1,3 +1,3 @@
 <p>{{goal.description}}</p>
-<button (click) = 'goalComplete(true)'>Complete</button>
 <p>This goal will be completed in {{goal.completeDate|dateCount}} days</p>
+<button class="btn btn-danger" (click)='goalDelete(true)'>Delete Goal</button>
