--- a/src/app/goal/goal.component.html
+++ b/src/app/goal/goal.component.html
@@ -1,12 +1,21 @@
 <h1> My Goals </h1>
-<ul>
-  <div  *ngFor="let goal of goals; let i=index">
-    <li appStrikethrough>{{goal.name}} due on {{goal.completeDate | date | uppercase}}</li>
-    <button (click)='toggleDetails(i)'>Toggle Details</button>
-
-    <app-goal-details *ngIf="goal.showDescription" [goal]='goal' (isComplete)='completeGoal($event,i)'></app-goal-details>
-
+<hr>
+<div class="container">
+  <div class="row">
+    <app-goal-form (addGoal)="addNewGoal($event)"></app-goal-form>
   </div>
-</ul>
+</div>
+
+<div class="container">
+  <div class="row" *ngFor="let goal of goals; let i=index">
+    <div class="row">
+      <h4 appStrikethrough>{{goal.name}} due on {{goal.completeDate | date | uppercase}}</h4>
+      <button (click)='toggleDetails(i)' class="btn btn-primary">Toggle Details</button>
+    </div>
+      <div class="row" *ngIf="goal.showDescription">
+      <app-goal-details [goal]='goal' (isComplete)='deleteGoal($event,i)'></app-goal-details>
+      </div>
+  </div>
+</div>
 
 <p *ngIf='goals.length > 5'>You have too many goals</p>
